fix to avoid horizontal scrollbar with bootstrap in popups

--- a/alpaca/css/alpaca-dnnbootstrap.css
+++ b/alpaca/css/alpaca-dnnbootstrap.css
@@ -9,6 +9,7 @@
 
 .popup div.alpaca {
     padding-bottom: 65px;
+    width: 99%;
 }
 
 .popup .dnnActions {
